Terceiro commit teste.

--- a/public/publication/deflatebr/index.html
+++ b/public/publication/deflatebr/index.html
@@ -876,7 +876,7 @@
   </div>
 </div>
 -->
-<p>O pacote <a href="https://cran.r-project.org/web/packages/deflateBR/index.html">deflateBR</a> foi criado por <span class="citation">Meireles (<a href="#ref-Meireles2018" role="doc-biblioref">2018</a>)</span> e obtém séries de índices de preços atualizados da API do <a href="http://ipeadata.gov.br/Default.aspx">IPEA</a>.</p>
+<p>O pacote <a href="https://cran.r-project.org/web/packages/deflateBR/index.html">deflateBR</a> foi criado por <span class="citation">Meireles (<a href="#ref-Meireles2018" role="doc-biblioref">2018</a>)</span> e obtém séries de índices de preços atualizados da API do <a href="http://ipeadata.gov.br/Default.aspx">Instituto de Pesquisa Econômica Aplicada (IPEA)</a>.</p>
 </div>
 <div id="carregando-o-pacote" class="section level2">
 <h2>Carregando o pacote</h2>
